# downloadtools

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  renovate.json
.forgejo/workflows/: publish.yml
downloadtools/: DownloadTools.py  DownloadToolsException.py  SpecialCaseUrl.py  ThreadingHelper.py  __init__.py  make_items.py
src/downloadtools/: DownloadTools.py  DownloadToolsException.py  DownloadToolsItem.py  ThreadingHelper.py  __init__.py  states.py
tests/: test_basic.py  test_checks.py  test_filename.py  test_resolve_folder.py  urls.txt
