[project]
name = "downloadtools"
version = "7.1.0"
description = "Framework for downloading media from urls."
authors = [{ name = "Amotoma Halfeye", email = "amotomahalfeye@protonmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "tqdm>=4.67.3",
    "pydantic>=2.13.4",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
upgrade = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.hatch.build.targets.sdist]
only-packages = true
